* change 7-bit ascii into 7-bit
* 2011 update
* move data dump to verbose output
* automatically detect file size

Alder-32
* finish SIMD variant

CRC-32
* implement basic (scalar) CRC-32 calculation method
* implement basic (scalar) weak CRC-32 calculation method
* add mod2 polynomial support

Fletcher-16
* finish fletcher16

Filetime:
* create equivalent tool in libfdatetime

20160116
* worked on merging atools and assorted

20160110
* updated dependencies

20160103
* 2016 update

20151225
* worked on merging atools and assorted
* merged crc32 and wcrc32
* replaced individual copyright_fprint by assorted_output_copyright_fprint

20150612
* worked on lzxpressdecompress

20141203
* worked on rc4decrypt
* worked on lzxpressdecompress
* worked on moving copyright_fprint to assorted_output_copyright_fprint

20140512
* worked on lzxpressdecompress

20140418
* moved lzxpress and lznt1 support to libfwnt
* renamed on ntfsdecompress to lznt1decompress

20140414
* worked on ntfsdecompress
* worked on lzxpressdecompress
  - XPRESS Huffman compression

20140228
* worked on cxdecompress

20140131
* 2014 update

20130706
* worked on zdecompress

20130401
* 2013 update
* updated dependencies
* worked on replacing notify.[ch] by libcnotify
* worked on replacing file_io.[ch] by libcfile
* worked on replacing getopt by libcsystem
* code clean up

20121205
* banalyze added entropy
* removed memwatch

20120825
* fixed issue in bmd5sum not handling size correctly
* reverse library order in Makefile.am
* bmd5sum: replaced fopen by libcfile_stream
* bmcp:
  - code clean up
  - added file IO method for testing
* created bcat

20120824
* updated configure

20120809
* improved crc32 and wcrc32

20120729
* improved adler32

20120728
* improved banalyze

20120528
* minor changes

20120516
* minor changes for winapi build

20120515
* updated dependencies
* added libcfile support

20110925
* small changes

20110828
* updated configure, common, libcstring, libnotify, liberror,