@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [assorted],
- [20160117],
+ [20160124],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
