@@ -44,6 +44,9 @@ Fletcher-16
 Filetime:
 * create equivalent tool in libfdatetime
 
+20160124
+* worked on deflate
+
 20160116
 * worked on merging atools and assorted
 
